cmake_minimum_required(VERSION 3.13)
file(GLOB sources "*.cpp")
foreach(source ${sources})
    get_filename_component(base "${source}" NAME_WE)
    add_executable("${base}" "${source}")
    set_property(TARGET "${base}" PROPERTY CXX_STANDARD 23)
    target_link_libraries("${base}" "cron")
    add_test("test-${base}" "${base}")
endforeach()
